Clean public version of ONE-Mobility